After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 590611 - FocusIn events of override-redirect windows not handled correctly
FocusIn events of override-redirect windows not handled correctly
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2009-08-03 12:32 UTC by Tomas Frydrych
Modified: 2009-08-04 13:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch that fixes FocusIn handling for OR windows (918 bytes, patch)
2009-08-03 12:34 UTC, Tomas Frydrych
needs-work Details | Review
Updated patch with the missing notification (1.02 KB, patch)
2009-08-04 08:03 UTC, Tomas Frydrych
committed Details | Review

Description Tomas Frydrych 2009-08-03 12:32:59 UTC
Currently, if we receive a FocusIn event for an Override redirect window, we try to remove/add it to the MRU list, which results in an abort. The attached patch fixes this by limiting processing of such even to resetting MetaDisplay focus window to NULL.
Comment 1 Tomas Frydrych 2009-08-03 12:34:54 UTC
Created attachment 139779 [details] [review]
Patch that fixes FocusIn handling for OR windows
Comment 2 Owen Taylor 2009-08-03 18:00:42 UTC
Doesn't look like it handles notification for the recently added focus-window property correctly.
Comment 3 Tomas Frydrych 2009-08-04 08:03:04 UTC
Created attachment 139844 [details] [review]
Updated patch with the missing notification
Comment 4 Owen Taylor 2009-08-04 13:24:01 UTC
Looks good
Comment 5 Tomas Frydrych 2009-08-04 13:31:27 UTC
Committed as 3eee6b4218f6781d68eaebce88814ee0a9aa7b2c.